# RoExtract

./: .gitignore  CHECKLIST.md  Cargo.toml  README.md  RoExtract-legacy.pyw
.github/workflows/: build-and-release.yml
docs/en-GB/: CLI.md  README.md
locales/: de-DE.ftl  en-GB.ftl  englifsh.ftl  ja-JP.ftl  pirate-speak.ftl  pl-PL.ftl  shakespearian-english.ftl  zh-CN.ftl
src/: config.rs  gui.rs  log.rs  logic.rs  main.rs  updater.rs
src/gui/: settings.rs  welcome.rs
src/updater/: gui.rs
